--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "proxy": "http://localhost:5000",
   "dependencies": {
     "@material-ui/core": "^4.11.2",
-    "axios": "^0.19.0",
+    "@material-ui/icons": "^4.11.2",
+    "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "cookie-session": "^2.0.0-beta.3",
     "dotenv": "^4.0.0",
@@ -16,6 +17,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-icons": "^4.1.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "^3.4.1",
