--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-svg-worldmap": "^1.0.40",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
-    "redux-saga": "^1.0.2"
+    "redux-saga": "^1.0.2",
+    "uuid": "^3.4.0"
   },
   "scripts": {
     "start": "node server/server.js",
