--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "cookie-session": "^2.0.0-beta.3",
+    "copy-to-clipboard": "^3.3.1",
     "dotenv": "^4.0.0",
     "express": "^4.16.4",
     "passport": "^0.4.0",
