--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-globe": "^5.0.2",
     "react-icons": "^4.1.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.0",
@@ -28,6 +29,7 @@
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.0.2",
+    "three": "^0.124.0",
     "uuid": "^3.4.0"
   },
   "scripts": {
